# notso-glb

./: .coderabbit.yaml  .dockerignore  .dprint.json  .dprint.jsonc  .gitignore  .ignore  .mcp.json  .rules  CLI.md  Dockerfile  Dockerfile.dev  Dockerfile.http  LICENSE  README.md  generate_docs.py  justfile  opencode.jsonc  pyproject.toml  server.py  tombi.toml
.github/: labels.yml
.github/actions/download-wasm/: action.yml  download.sh  uv-available.sh
.github/actions/install-dprint/: action.yml  install.sh
.github/actions/install-uv/: action.yml  uv-available.sh
.github/actions/test-wasm-models/: action.yml  test.py
.github/config/: claude.json
.github/workflows/: autofix.yml  claude.yml  docker-publish.yml  docker.yml  pr-test-comment.yml  publish.yml  sync-labels.yml  test-wasm.yml  version-bump.yml
.zed/: settings.json
scripts/: __init__.py  generate_docs.py  test_wasm_models.py  update_wasm.py
src/notso_glb/: __init__.py  __main__.py  _bpy.py  cli.py  glb_export_optimizer.py
src/notso_glb/analyzers/: __init__.py  bloat.py  bones.py  duplicates.py  skinned_mesh.py  uv_maps.py
src/notso_glb/cleaners/: __init__.py  bones.py  duplicates.py  mesh.py  textures.py  uv_maps.py  vertex_groups.py
src/notso_glb/exporters/: __init__.py  gltf.py
src/notso_glb/utils/: __init__.py  blender.py  constants.py  draco.py  gltfpack.py  logging.py  naming.py
src/notso_glb/wasm/: __init__.py  constants.py  download.py  gltfpack.wasm  runner.py  runtime.py  wasi.py
tests/: __init__.py  conftest.py  test_cli.py  test_glb_export_optimizer.py
tests/actions/: __init__.py  conftest.py  test_wasm_models.py
tests/analyzers/: test_bloat.py  test_bones.py  test_duplicates.py  test_skinned_mesh.py  test_uv_maps.py
tests/cleaners/: __init__.py  test_bones.py  test_duplicates.py  test_mesh.py  test_textures.py  test_uv_maps.py  test_vertex_groups.py
tests/exporters/: __init__.py  test_gltf.py
tests/scripts/: conftest.py  test_generate_docs.py  test_update_wasm.py
tests/utils/: conftest.py  test_constants.py  test_draco.py  test_gltfpack.py  test_helpers.py
tests/wasm/: __init__.py  conftest.py  test_constants.py  test_wasi.py  test_wasm_init.py
