[project]
name = "notso-glb"
version = "0.1.0"
description = "GLB Export Optimizer for Mascot Models"
readme = "README.md"
requires-python = "==3.11.*"
license = "MIT"
authors = [{ name = "Kaj Kowalski", email = "info@kajkowalski.nl" }]
keywords = [
  "3d",
  "blender",
  "compression",
  "draco",
  "glb",
  "gltf",
  "mascot",
  "optimization",
  "webgl"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Graphics :: 3D Modeling",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion"
]

[project.urls]
Homepage = "https://github.com/kjanat/notso-glb"
Issues = "https://github.com/kjanat/notso-glb/issues"
Repository = "https://github.com/kjanat/notso-glb.git"
dependencies = [
  "bpy>=5,<6",
  "rich>=14.2.0",
  "typer>=0.20.1",
]

[project.scripts]
notso-glb = "notso_glb:main"

[dependency-groups]
dev = [
  "fake-bpy-module>=20251003",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.10",
  "tombi>=0.7.26",
  "ty>=0.0.5",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest]
addopts = ["--cov", "--import-mode=importlib", "-ra"]
minversion = "9.0"
strict = true
testpaths = ["tests"]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
preview = true
select = ["E4", "E7", "E9", "F", "F", "B", "UP"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"
