[project]
name            = "notso-glb"
version         = "1.0.0"
description     = "GLB Export Optimizer for Mascot Models"
readme          = "README.md"
requires-python = "~=3.11.0"
authors         = [{ name = "Kaj Kowalski", email = "info@kajkowalski.nl" }]
keywords        = ["3d", "blender", "compression", "draco", "glb", "gltf", "mascot", "optimization", "webgl"]
classifiers     = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Graphics :: 3D Modeling",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion"
]
dependencies    = [
  "bpy>=5,<6; python_version ~= '3.11.0'",
  "rich>=14.2.0",
  "typer>=0.20.1",
  "wasmtime>=41.0.0",
]

[project.urls]
Homepage   = "https://github.com/kjanat/notso-glb"
Issues     = "https://github.com/kjanat/notso-glb/issues"
Repository = "https://github.com/kjanat/notso-glb.git"

[project.scripts]
notso-glb = "notso_glb:main"

[dependency-groups]
dev   = [
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "types" },
]
lint  = [
  "ruff>=0.14.10",
  "tombi>=0.7.26",
  "ty>=0.0.5",
]
test  = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
]
types = [
  "fake-bpy-module>=20251003",
  "ty>=0.0.5",
]

[build-system]
requires      = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest]
addopts    = ["--cov", "--import-mode=importlib", "-ra"]
minversion = "9.0"
strict     = true
testpaths  = ["tests"]

[tool.ruff]
line-length    = 88
indent-width   = 4
target-version = "py311"

[tool.ruff.lint]
preview   = true
select    = ["E4", "E7", "E9", "F", "F", "B", "UP"]
ignore    = []
fixable   = ["ALL"]
unfixable = []

[tool.ruff.format]
preview                    = true
quote-style                = "double"
indent-style               = "space"
skip-magic-trailing-comma  = false
line-ending                = "lf"
docstring-code-format      = true
docstring-code-line-length = "dynamic"

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
source-include = ["src/notso_glb/wasm/**"]
